# RobustEdge

./: LICENSE  README.md
RobustEdgeBench/: .gitignore  README.md  pyproject.toml  requirements.txt
RobustEdgeBench/configs/: default.yaml
RobustEdgeBench/data/: README.md
RobustEdgeBench/docs/: dataset_schema.md  evaluation_protocol.md  feature_extraction.md  paper_methodology_updates.md  perturbations.md  releasing_data.md
RobustEdgeBench/notebooks/: 00_dataset_overview.ipynb  01_feature_extraction.ipynb  03_evaluate_robustness.ipynb  04_paper_figures.ipynb
RobustEdgeBench/outputs/paper_figures/: make_camera_ready_figures.py
RobustEdgeBench/scripts/: make_manifest.py  run_pipeline.py  summarize_dataset.py
RobustEdgeBench/src/robustedge/: __init__.py  calibration.py  constants.py  data.py  features.py  io.py  labels.py  metrics.py  models.py  pipeline.py  plotting.py  robustness.py
RobustEdgeBench/tests/: test_features.py  test_metrics.py  test_parse_names.py
RobustEdgeBench/tests/fixtures/minimal_dataset/phase-phase1_clean_benign_perturbation-none_attackDuration-0_intensity-_fixture/iteration-1/: sysdig_logs.ndjson  tep_signals.ndjson
RobustEdgeBench/tests/fixtures/minimal_dataset/phase-phase1_clean_benign_perturbation-none_attackDuration-0_intensity-_fixture/iteration-2/: tep_controller_mv_commands.ndjson
RobustEdgeBench/tests/fixtures/minimal_dataset/phase-phase2_clean_attacked_perturbation-none_attackDuration-20_intensity-medium_fixture/iteration-1/: sysdig_logs.ndjson  tep_signals.ndjson
RobustEdgeTestbed/: .dockerignore  .env.example  README.md  (+3 more)
(+36 files in other folders)
