[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "robustedge-bench"
version = "0.2.0"
description = "Robustness analysis pipeline for ML-based container attack detection in industrial edge testbeds."
readme = "README.md"
requires-python = ">=3.9"
authors = [
  {name = "RobustEdgeBench contributors"}
]
license = {text = "MIT"}
dependencies = [
  "numpy>=1.23",
  "pandas>=1.5",
  "scikit-learn>=1.2",
  "matplotlib>=3.7",
  "PyYAML>=6.0",
  "joblib>=1.2",
  "tqdm>=4.65"
]

[project.optional-dependencies]
dev = [
  "pytest>=7.0",
  "notebook>=7.0",
  "ipykernel>=6.0"
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
